@@ -1,3 +1,12 @@
+2009-03-01  Matthas Clasen  <mclasen@redhat.com>
+
+	Bug 573515 – po-properties/ special Makefile.in.in handling causes
+	failure to build
+
+	* Makefile.in.in: Don't hardcode /bin/sh as shell, and
+	don't use obsolete calling convention for config.status.
+	Reported by Loïc Minier
+
 2009-02-27  Rajesh Ranjan  <rajeshkajha@yahoo.com>
 
 	* mai.po: Updated gtk+ for maithili
